--- a/dementia-journal-app/src/pages/Home.css
+++ b/dementia-journal-app/src/pages/Home.css
@@ -1,48 +1,58 @@
+
+.home-container {
+    margin:2rem;
+    padding: 2rem;
+    background-color: #000000;
+    border-radius: 10px;
+    color: white;
+    font-size: 2rem;
+    width:100%;
+    
+}
 .home-container-name {
     margin:2rem;
     padding: 2rem;
-    background-color: #416165;
+    background-color: #000000;
     border-radius: 10px;
     color: white;
     font-size: 2rem;
     
 }
 
-.home-container-dual {
+
+.home-container-middle {
+    margin:2rem;
+    padding: 1rem;
+    background-color: #000000;
+    border-radius: 10px;
+    color: white;
+    font-size: 2rem;
     display: flex;
-    flex-direction: row;
-    gap: 2rem;
-    padding:2rem;
+    justify-content: center;
 }
 
-.home-container-right {
-  
-    background-color: #416165;
+
+
+.home-progress-bar-container{
+    margin:2rem;
+    padding: 2rem;
+    background-color: #000000;
     border-radius: 10px;
     color: white;
     font-size: 2rem;
-    width: 100%;
-    display: flex
-}
-.home-right-action {
-    display:flex;
-    background-color:blue;
 }
 
-.home-right-progress-bar{
-    background-color:blue;
+.home-progress-bar {
+  width: 100%;
+  background-color: #e0e0e0;
+  border-radius: 20px;
+  height: 20px;
+  overflow: hidden;
 }
 
-.home-right-statistics{
-    color:blue;
-}
-
-.home-container-left {
-    
-    
-    background-color: #416165;
-    border-radius: 10px;
-    color: white;
-    font-size: 2rem;
-    width: 30%;
+.home-progress-bar-fill {
+  height: 100%;
+  background-color: #4caf50;
+ 
+  transition: width 1s ease-in-out;
 }
