--- a/dementia-journal-app/src/pages/Journal.css
+++ b/dementia-journal-app/src/pages/Journal.css
@@ -1,8 +1,10 @@
 .journal-container {
     display:flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
+    
 }
 .journal-title {
     color:#131112 ;
@@ -10,10 +12,11 @@
     font-size: 2.5rem;
     flex-direction: column;
     align-items: center;
-    margin: 2rem;
-    padding:2rem;    
+    
 }
-
+.journal-subtext {
+    font-size: 1.5rem;
+}
 .journal-text {
     width: 100%;
     font-size: 2rem; 
